syntax = "proto3";

package protos;

option go_package = "orch-go/gen/protos;protos";

message DateOnly {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}
